--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,21 @@
 .Trash*/*
 .Trash*/**/*
 .directory
-
+*.cache
+*.in
+*.o
+configure
+Makefile
+aclocal.m4
+config.h
+config.log
+config.status
+install-sh
+.deps
+missing
+depcomp
+smokeparrot
+stamp-h1
+compile
+a.out
+.dirstamp
