--- a/smokeparrot-daemon/configure.ac
+++ b/smokeparrot-daemon/configure.ac
@@ -2,8 +2,11 @@ AC_INIT([smokeparrot], [0.1], [torsti.schulz@iki.fi])
 AM_INIT_AUTOMAKE([-Wall -Werror gnits subdir-objects])
 AC_PROG_CC
 AM_PROG_CC_C_O
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.18.1])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
+ po/Makefile.in
  Makefile
 ])
 AC_OUTPUT
