--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.cache
 *.in
 *.o
+.deps
 configure
 Makefile
 aclocal.m4
@@ -22,3 +23,21 @@ stamp-h1
 compile
 a.out
 .dirstamp
+
+#
+m4
+
+#getextize
+config.sub
+config.rpath
+config.guess
+ABOUT-NLS
+Makevars.template
+*.gmo
+*.header
+*.sed
+*.sin
+stamp-po
+Rules-quot
+POTFILES
+!POTFILES.in
