Update compiler flags
* Add warnings (all, extra + others).
* Add _X_OPEN_SOURCE=600 and _BSD_SOURCE feature test macros.
* Set std=c99 and add -pedantic.

--- a/smokeparrot-daemon/Makefile.am
+++ b/smokeparrot-daemon/Makefile.am
@@ -4,6 +4,19 @@ dist_doc_DATA = README NEWS AUTHORS COPYING INSTALL THANKS ChangeLog
 LDADD = @LIBINTL@
 localedir = $(datadir)/locale
 AM_CPPFLAGS = -DLOCALEDIR=\"$(localedir)\"
+# _BSD_SOURCE is required to expose daemon() in unistd.h.
+AM_CFLAGS = -D_XOPEN_SOURCE=600 \
+            -D_BSD_SOURCE \
+            -std=c99 \
+            -pedantic \
+            -Wall \
+            -Wextra \
+            -Wwrite-strings -Winit-self -Wcast-align -Wcast-qual \
+            -Wpointer-arith -Wformat=2 -Wmissing-declarations -Wlogical-op \
+            -Wmissing-include-dirs -Wno-unused-parameter -Wjump-misses-init \
+            -Wuninitialized -Wold-style-definition -Wstrict-prototypes \
+	    -Wmissing-prototypes -Wno-format-extra-args -Wshadow \
+            -Wdouble-promotion -Wbad-function-cast -Wcast-qual -Wconversion
 
 SUBDIRS = po
 
