Add signal handling, pid file locking and cleanup to program.

--- a/smokeparrot-daemon/Makefile.am
+++ b/smokeparrot-daemon/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = smokeparrot
-smokeparrot_SOURCES = src/smokeparrot.c src/sp_logging.c src/sp_initialize.c
+smokeparrot_SOURCES = src/smokeparrot.c \
+                      src/sp_logging.c \
+                      src/sp_initialize.c \
+                      src/sp_signals.c
 dist_doc_DATA = README NEWS AUTHORS COPYING INSTALL THANKS ChangeLog
 LDADD = @LIBINTL@
 localedir = $(datadir)/locale
