Use --std=c99 instead of --std=c1x for compilation

--- a/smokeparrot-daemon/Makefile
+++ b/smokeparrot-daemon/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 
 WARNINGS = -Wall -Wformat -Wformat-security -Werror=format-security
 HARDENING = -fstack-protector -D_FORTIFY_SOURCE=2 -pie -fPIE --param ssp-buffer-size=4 
-DEFS = --std=c1x -pthread -D_REENTRANT -O1
+DEFS = --std=c99 -pthread -D_REENTRANT -O1
 FTM = -D_GNU_SOURCE
 CFLAGS = $(DEFS) $(FTM) $(HARDENING) $(WARNINGS)
 
